@@ -1,3 +1,11 @@
+2012-11-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCglobl.h,
+	* src/mcs51/main.c
+	* src/mcs51/gen.c (emitDummyCall,genJumpTab, genPcall):
+	  added --no-ret-without-call option for compatibility with
+	  Infineon's Memory Extension Stack
+
 2012-11-15 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdcc.sln,
